--- a/server/djangoapp/templates/djangoapp/about.html
+++ b/server/djangoapp/templates/djangoapp/about.html
@@ -1,22 +1,23 @@
+<!DOCTYPE html>
 <html>
-<h1>
-
-</h1>
-
-
-<div class="aboutus-section">
+    <head>
+        <title>
+            About us
+        </title>
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+    </head>
+   
+    {% include 'staticnav.html' %}
+    <body>
+    <div class="aboutus-section">
         <div class="container">
             <div class="row">
-                <div class="col-md-3 col-sm-6 col-xs-12">
                     <div class="aboutus">
                         <h2 class="aboutus-title">About Us</h2>
                         <p class="aboutus-text">Welcome to Best Cars dealership, home to the best cars in North America. We sell domestic and imported cars at reasonable prices.</p>
                     </div>
-                </div>
-                <div class="col-md-3 col-sm-6 col-xs-12">
-                    <div class="aboutus-banner">
-                        <img src="http://themeinnovation.com/demo2/html/build-up/img/home1/about1.jpg" alt="">
-                    </div>
-                </div>
-
+            </div>
+        </div>
+    </div>
+    </body>
 </html>
