--- a/server/djangoapp/templates/djangoapp/index.html
+++ b/server/djangoapp/templates/djangoapp/index.html
@@ -16,36 +16,15 @@
     <body>
 
     <!--Add a nav bar here -->
-    <nav class="navbar navbar-light bg-light">
+    {% include 'staticnav.html' %}
+    <!-- <nav class="navbar navbar-dark bg-dark">
         <div class="container-fluid">
             <div class="navbar-header">
                 <a class="navbar-brand" href="#">Dealer Review</a>
-                <a class="navbar-brand" href="{% url 'djangoapp:aboutpage' %}">About</a>
-                <!-- <a class="navbar-brand" href="{% url 'djangoapp:contactpage' %}">Contact</a> -->
-               
+                <a class="navbar-brand" href="{% url 'djangoapp:about' %}">About</a>               
             </div>
-            <!-- <ul class="nav navbar-nav navbar-right">
-                {% if user.is_authenticated %}
-                <li>
-                    <a class="btn btn-link" href="#">{{ user.first_name }}({{ user.username }})</a>
-                    <a class="btn btn-link" href="{% url 'djangoapp:logout' %}">Logout</a> 
-                </li>
-                {% else %}
-                <li>
-                    <form class="form-inline" action="{% url 'djangoapp:login' %}" method="post">
-                        {% csrf_token %}
-                        <div class="input-group">
-                            <input type="text" class="form-control" placeholder="Username" name="username" >
-                            <input type="password" class="form-control" placeholder="Password" name="psw" >
-                            <button class="btn btn-primary" type="submit">Login</button>
-                            <a class="btn btn-link" href="{% url 'djangoapp:registration' %}">Sign Up</a>
-                        </div>
-                    </form>
-                </li> -->
-                {% endif %}
-            </ul>
         </div>
-    </nav>
+    </nav> -->
 
     <!--Add a dealer table here -->
 
