--- a/server/djangoapp/templates/djangoapp/about.html
+++ b/server/djangoapp/templates/djangoapp/about.html
@@ -13,7 +13,7 @@
         <div class="container">
             <div class="row">
                     <div class="aboutus">
-                        <h2 class="aboutus-title">About Us</h2>
+                        <h2 class="aboutus-title" style="font-size: 4em; margin-bottom: 3%; text-align: center;">About Us</h2>
                         <p class="aboutus-text">Welcome to Best Cars dealership, home to the best cars in North America. We sell domestic and imported cars at reasonable prices.</p>
                     </div>
             </div>
