--- a/server/djangoapp/templates/djangoapp/contact.html
+++ b/server/djangoapp/templates/djangoapp/contact.html
@@ -14,45 +14,51 @@
         <script src="https://unpkg.com/bootstrap-table@1.18.2/dist/extensions/filter-control/bootstrap-table-filter-control.min.js"></script>
     </head>
     <body>
-        {% include 'Navbar.html' %}
+        {% include 'staticnav.html' %}
         <div class="container">
-            <p class="heading-txt" style="font-size: 2em; margin-bottom: 3%; text-align: center;">Contact</p>
+            <p class="heading-txt" style="font-size: 4em; margin-bottom: 3%; text-align: center;">Contact</p>
             <div style="margin-top: 5%;display: flex; justify-content: space-evenly; flex-wrap: wrap;">
-            <div class="card text-white bg-dark mb-3" style="max-width: 18rem;">
-                <div class="card-header">Contact Information</div>
+            <div class="card text-danger bg-dark mb-3" style="max-width: 20rem;">
+                <div class="card-header" style="text-align: center">Contact Information</div>
                 <div class="card-body">
-                    <h5 class="card-title">Customer Care</h5>
-                    <p class="card-text">Name: Dale </br> Mobile: 12145623 </br> Email: Dale@dealership.com </p>
+                    <h5 class="card-title">Owner</h5>
+                    <p class="card-text">Name: Gregory Harrison </br> (555) 123-5678 </br> Email: gregory.harrison@prestigemotors.com </p>
                 </div>
             </div>
-                    <div class="card text-white bg-dark mb-3" style="max-width: 18rem;">
-                <div class="card-header">Contact Information</div>
+                    <div class="card text-danger bg-dark mb-3" style="max-width: 20rem;">
+                <div class="card-header" style="text-align: center">Contact Information</div>
                 <div class="card-body">
-                    <h5 class="card-title">Customer Care</h5>
-                    <p class="card-text">Name: Dale </br> Mobile: 12145623 </br> Email: Dale@dealership.com </p>
+                    <h5 class="card-title">Senior Sales Consultant</h5>
+                    <p class="card-text">Name: Benjamin Foster </br> Mobile: (555) 456-7890 </br> Email: benjamin.foster@prestigemotors.com </p>
                 </div>
             </div>
-                    <div class="card text-white bg-dark mb-3" style="max-width: 18rem;">
-                <div class="card-header">Contact Information</div>
+                    <div class="card text-danger bg-dark mb-3" style="max-width: 20rem;">
+                <div class="card-header" style="text-align: center">Contact Information</div>
                 <div class="card-body">
-                    <h5 class="card-title">Customer Care</h5>
-                    <p class="card-text">Name: Dale </br> Mobile: 12145623 </br> Email: Dale@dealership.com </p>
+                    <h5 class="card-title">Finance Specialist</h5>
+                    <p class="card-text">Name: Isabella Martinez </br> Mobile: (555) 456-7890 </br> Email: isabella.martinez@prestigemotors.com </p>
                 </div>
             </div>
-                    <div class="card text-white bg-dark mb-3" style="max-width: 18rem;">
-                <div class="card-header">Contact Information</div>
+                    <div class="card text-danger bg-dark mb-3" style="max-width: 20rem;">
+                <div class="card-header" style="text-align: center">Contact Information</div>
                 <div class="card-body">
-                    <h5 class="card-title">Customer Care</h5>
-                    <p class="card-text">Name: Dale </br> Mobile: 12145623 </br> Email: Dale@dealership.com </p>
+                    <h5 class="card-title">Sales Manager</h5>
+                    <p class="card-text">Name: Victoria Sterling </br> Mobile: (555) 987-6543 </br> Email: victoria.sterling@prestigemotors.com </p>
                 </div>
             </div>
-                    <div class="card text-white bg-dark mb-3" style="max-width: 18rem;">
-                <div class="card-header">Contact Information</div>
+                    <div class="card text-danger bg-dark mb-3" style="max-width: 20rem;">
+                <div class="card-header" style="text-align: center">Contact Information</div>
                 <div class="card-body">
-                    <h5 class="card-title">Customer Care</h5>
-                    <p class="card-text">Name: Dale </br> Mobile: 12145623 </br> Email: Dale@dealership.com </p>
+                    <h5 class="card-title">Sales Consultant</h5>
+                    <p class="card-text">Name: Alexander Knight </br> Mobile: (555) 789-1234 </br> Email: alex.knight@prestigemotors.com </p>
                 </div>
             </div>
+                    <div class="card text-danger bg-dark mb-3" style="max-width: 20rem;">
+                <div class="card-header" style="text-align: center">Contact Information</div>
+                <div class="card-body">
+                    <h5 class="card-title">Marketing Coordinator</h5>
+                    <p class="card-text">Name: Olivia Thompson </br> Mobile: (555) 876-5432 </br> Email: olivia.thompson@prestigemotors.com </p>
+                </div>
             </div>
         </div>
     </body>
