--- a/server/djangoapp/templates/djangoapp/about.html
+++ b/server/djangoapp/templates/djangoapp/about.html
@@ -14,7 +14,10 @@
             <div class="row">
                     <div class="aboutus">
                         <h2 class="aboutus-title" style="font-size: 4em; margin-bottom: 3%; text-align: center;">About Us</h2>
-                        <p class="aboutus-text">Welcome to Best Cars dealership, home to the best cars in North America. We sell domestic and imported cars at reasonable prices.</p>
+                        <p class="aboutus-text">Welcome to Best Cars dealership, home to the best cars in North America. We sell domestic and 
+                            imported cars at reasonable prices.</p>
+                        <p class="aboutus-text"> Address: 123 Luxe Avenue, Grandville Heights, Metropolitan City <br> Contact Information: Phone: (555) 123-4567 
+                            <br> Email: info@prestigemotors.com <p>
                     </div>
             </div>
         </div>
