--- a/djangoapp/templates/djangoapp/registration.html
+++ b/djangoapp/templates/djangoapp/registration.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -22,29 +22,87 @@
 
 </head>
     <body>
-    <!--Add a registration form here -->
     {% extends 'staticnav.html' %}
     <h1>Sign Up</h1>
-    <form action="{% url 'djangoapp:register' %}" method="post">
+    <form action="{% url 'djangoapp:registration' %}" method="post">
         {% csrf_token %}
         <div class="form-group">
-            <label for="username">Username</label>
-            <input type="text" class="form-control" name="username" id="username" required>
+            <label for="username"><b>Username</b></label>
+            <input type="text" placeholder= "Enter your Username: " class="form-control" name="username" id="username" required>
         </div>
 
         <div class="form-group">
-            <label for="userfirstname">First Name</label>
-            <input type="text" class="form-control" name="userfirstname" id="userfirstname" required>
+            <label for="firstname">First Name</label>
+            <input type="text"  placeholder= "Enter your First Name: " class="form-control" name="firstname" id="firstname" required>
         </div>
         <div class="form-group">
-            <label for="userlastname">Last Name</label>
-            <input type="text" class="form-control" name="userlastname" id="userlastname" required>
+            <label for="lastname">Last Name</label>
+            <input type="text"  placeholder= "Enter your Last Name: " class="form-control" name="lastname" id="lastname" required>
         </div>
         <div class="form-group">
-            <label for="userpassword">Password</label>
-            <input type="password" class="form-control" name="userpassword" id="userpassword" required>
+            <label for="password">Password</label>
+            <input type="password"  placeholder= "Enter your Password: " class="form-control" name="password" id="password" required>
         </div>
         <button type="submit" class="btn btn-primary">Submit</button>
+        </form>
+    </body>
+</html> -->
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        {% load static %}
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    </head>
+    <body>
+        {% extends 'staticnav.html' %}
+         <!-- <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <a class="navbar-brand" href="#">Best Cars</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item active">
+                        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/djangoapp/about">About Us</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/djangoapp/contact">Contact Us</a>
+                    </li>
+                    {% if user.is_authenticated %}
+                    <li>
+                        <a class="btn btn-link" href="#">{{ user.first_name }}{{ user.username }}</a>
+                        <a class="btn btn-link" href="logout/">Logout</a>
+                    </li>
+                    {% else %}
+                        <li>
+                                <a class="btn btn-link" href="/djangoapp/login/">Sign In</a>
+                                <a class="btn btn-link" href="/djangoapp/signup/">Sign Up</a>
+                        </li>
+                    {% endif %}
+                </ul>
+            </div>
+        </nav> -->
+        <form action="{% url 'djangoapp:registration' %}" method="post">
+            <div class="container">
+                <h1>Sign Up</h1>
+                <hr>
+                <label for="username"><b>User Name</b></label>
+                <input type="text" placeholder="Enter User Name: " name="username" required>
+                <label for="firstname"><b>First Name</b></label>
+                <input type="text" placeholder="Enter First Name: " name="firstname" required>
+                <label for="lastname"><b>Last Name</b></label>
+                <input type="text" placeholder="Enter Last Name: " name="lastname" required>
+                <label for="password"><b>Password</b></label>
+                <input type="password" placeholder="Enter Password: " name="password" required>
+                <div>
+                    {% csrf_token %}
+                    <button class="button" type="submit">Sign Up</button>
+                </div>
+            </div>
         </form>
     </body>
 </html>
