--- a/djangoapp/templates/staticnav.html
+++ b/djangoapp/templates/staticnav.html
@@ -31,7 +31,7 @@
                     <input type="text" class="form-control" placeholder="Username" name="username">
                     <input type="password" class="form-control" placeholder="Password" name="password">
                     <button class="btn btn-secondary" type="submit">Login</button>
-                    <a class="btn btn-link" href="{% url 'djangoapp:registration' %}">Sign Up</a>
+                    <a class="btn btn-link" href="{% url 'djangoapp:signup' %}">Sign Up</a>
                   </div>
                 </form>
               </div>
