--- a/server/djangoapp/templates/djangoapp/add_review.html
+++ b/server/djangoapp/templates/djangoapp/add_review.html
@@ -12,5 +12,42 @@
 </head>
     <body>
     <!--Add review form here -->
+    <h1>
+        Add Review
+    </h1>
+    <hr>
+    <form action="/djangoapp/dealer/{{context.dealerId}}/add-review/" method="post">
+        {% csrf_token %}
+        <div class="form-group mb-5">
+            <label for="reviewtext"><b>Enter the review content:</b></label>
+            <textarea class="form-control" id="reviewtext" name="reviewtext" rows="2" required
+                style="resize: none;"></textarea>
+        </div>
+        <div class="form-group form-check">
+            <input class="form-check-input" type="checkbox" name="iscarpurchased" id="iscarpurchased">
+            <label for="iscarpurchased">Did you purchase the car? </label>
+        </div>
+        <div class="form-group">
+            <label for="car">Select your car:</label>
+            <select name="car" id="car" class="form-select">
+                {% for car in context.cars %}
+                <option selected value={{car.id}}>
+                    {{car.model_make.make_name}} {{car.model_name}} {{ car.model_year }}
+                </option>
+                {% endfor %}
+            </select>
+        </div>
+        <div class="form-group" data-provide="datepicker">
+            <label for="purchasedate">Select your purchase date (mm/dd/yyyy):</label>
+            <input class="form-control" type="text" name="purchasedate" id="purchasedate">
+        </div>
+        <hr />
+        <button type="submit" class="btn btn-primary">Submit</button>
+    </form>
+    <script type="text/javascript">
+        $('#purchasedate').datepicker({
+            format: 'mm/dd/yyyy'
+        });
+    </script>
     </body>
 </html>
