--- a/server/djangoapp/templates/staticnav.html
+++ b/server/djangoapp/templates/staticnav.html
@@ -6,7 +6,7 @@
     <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
-                <a class="nav-link" href="/djangoapp">Home <span class="sr-only">(current)</span></a>
+                <a class="nav-link" href="/djangoapp/index">Home <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="/djangoapp/about">About Us</a>
@@ -18,16 +18,24 @@
         <ul class="navbar-nav ml-auto">
             {% if user.is_authenticated %}
             <li class="nav-item">
-                <a class="nav-link" style="color: rgb(43, 238, 238);" href="#">{{ user.username }}</a>
+                <a class="nav-link" style="color: gold;" href="#">{{ user.username }}</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link"  style="color: rgb(43, 238, 238);" href="logout/">Logout</a>
+                <a class="nav-link"  style="color: grey;" href="logout/">Logout</a>
             </li>
             {% else %}
-                <li>
-                        <a class="btn btn-link" href="/djangoapp/login/">Sign In</a>
+            <div>
+                <form class="form-inline" action="{% url 'djangoapp:login' %}" method="post">
+                    {% csrf_token %}
+                    <div class="input-group">
+                        <input type="text" class="form-control" placeholder="Username" name="username">
+                        <input type="password" class="form-control" placeholder="Password" name="password">
+                        <button class="btn btn-secondary" type="submit">Login</button>
+                        <!-- <a class="btn btn-link" href="/djangoapp/login/">Sign In</a> -->
                         <a class="btn btn-link" href="/djangoapp/signup/">Sign Up</a>
-                </li>
+                    </div>
+                </form>
+            </div>
             {% endif %}
         </ul>
     </div>
