--- a/server/djangoapp/templates/djangoapp/dealer_details.html
+++ b/server/djangoapp/templates/djangoapp/dealer_details.html
@@ -9,7 +9,7 @@
 
     <body>
     <!--Add a nav bar here -->
-    {% extends 'staticnav.html' %}
+    {% include 'staticnav.html' %}
     <!-- Add reviews as cards -->
     {% for dealer in dealerInfo %}
         <div class="py-4">
