--- a/server/djangoapp/templates/djangoapp/registration.html
+++ b/server/djangoapp/templates/djangoapp/registration.html
@@ -15,7 +15,7 @@
         <script src="https://unpkg.com/bootstrap-table@1.18.2/dist/extensions/filter-control/bootstrap-table-filter-control.min.js"></script>
     </head>
     <body>
-        {% include 'staticnav' %}
+        {% include 'staticnav.html' %}
     <!--Add a registration form here -->
         <form action="{% url 'djangoapp:signup' %}" method="post">
             <div class="container">
@@ -23,15 +23,18 @@
                 <hr>
                 <label for="username"><b>User Name</b></label>
                 <input type="text" placeholder="Enter User Name: " name="username" required>
+                <br>
                 <label for="firstname"><b>First Name</b></label>
                 <input type="text" placeholder="Enter First Name: " name="firstname" required>
+                <br>
                 <label for="lastname"><b>Last Name</b></label>
                 <input type="text" placeholder="Enter Last Name: " name="lastname" required>
+                <br>
                 <label for="password"><b>Password</b></label>
                 <input type="password" placeholder="Enter Password: " name="password" required>
                 <div>
                  {% csrf_token %}
-                    <button class="button" type="submit">Sign Up</button>
+                 <button class="button" type="submit">Sign Up</button>
                 </div>
             </div>
         </form>
