--- a/server/djangoapp/templates/staticnav.html
+++ b/server/djangoapp/templates/staticnav.html
@@ -6,12 +6,12 @@
     <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
-                <a class="nav-link" href="/djangoapp/index">Home <span class="sr-only">(current)</span></a>
+                <a class="nav-link" href="/djangoapp/index">Home</a>
             </li>
-            <li class="nav-item">
+            <li class="nav-item active">
                 <a class="nav-link" href="/djangoapp/about">About Us</a>
             </li>
-            <li class="nav-item">
+            <li class="nav-item active">
                 <a class="nav-link" href="/djangoapp/contact">Contact Us</a>
             </li>
         </ul>
